kubernetes/apps/apps/cerebro/cerebro/app/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cerebro-server
  labels:
    app.kubernetes.io/name: cerebro-server
    app.kubernetes.io/component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cerebro-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cerebro-server
        app.kubernetes.io/component: server
    spec:
      containers:
        - name: cerebro
          image: harbor.cloud.traunseenet.com/public/cerebro:v0.0.7-dev
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: config
          emptyDir: {}
